Mon Dec 23 00:30:53 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc: Fix comment documenting what's in
	  the base file (the sequential flag was missing).

Fri Dec 20 03:47:56 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_termlisttable.h,include/xapian/constants.h,
	  tests/api_backend.cc: Add Xapian::DB_NO_TERMLIST flag to allow
	  creating a database without a termlist (see #181).

Fri Dec 20 03:04:51 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h,unicode/tclUniData.cc: Update Unicode
	  character database to 6.3.0.
	* tests/api_unicode.cc: Add tests for U+061C, added in 6.3.0.

Fri Dec 20 00:20:01 GMT 2013  Olly Betts <olly@survex.com>

	* backends/dbfactory.cc: Clear any backend flag passed in before
	  passing the flags when opening stub databases, fixing test failure
	  in replicate1 caused by recent change adding
	  Xapian::DB_BACKEND_STUB.

Thu Dec 19 23:11:32 GMT 2013  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Simplify database creation in testcase
	  blocksize1.

Thu Dec 19 23:10:37 GMT 2013  Olly Betts <olly@survex.com>

	* backends/dbfactory.cc: Tweak conditionals around $XAPIAN_PREFER_BRASS
	  check.

Thu Dec 19 23:09:30 GMT 2013  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/dbfactory.cc,docs/deprecation.rst,
	  docs/overview.rst,include/xapian/constants.h,
	  include/xapian/dbfactory.h,tests/api_backend.cc,tests/api_db.cc:
	  Add Xapian::DB_BACKEND_STUB and deprecate Xapian::Auto::open_stub().

Thu Dec 19 06:46:15 GMT 2013  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Update example version to a more recent one.

Thu Dec 19 04:01:31 GMT 2013  Olly Betts <olly@survex.com>

	* docs/deprecation.rst,include/xapian/dbfactory.h,tests/api_db.cc,
	  tests/harness/: Deprecate Xapian::Brass::open() and
	  Xapian::Chert::open() in favour of the new Xapian::DB_BACKEND_BRASS
	  and Xapian::DB_BACKEND_CHERT flags.
